Sun Jan 21 10:42:29 UTC 2007 / 

 - clients/upslog.c, clients/upsimage.c, clients/upsc.c, clients/upsrw.c,
   clients/upscmd.c: allow specifying a UPS as upsname[@hostname[:port]]
   (default to 'localhost' if no hostname is specified)

Sat Jan 20 20:18:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/netuser.c, server/upsd.c: lowered loglevel for opening and
   closing connections from LOG_INFO to LOG_DEBUG [Alioth Bug #304113]

Sat Jan 20 19:36:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsmon.c, clients/upsc.c: removed check for validity of UPS
   definition (this is handled by the API, which may fill in defaults)
 * clients/upsclient.c:
   - honor the UPSCLI_CONN_INET and UPSCLI_CONN_INET6 flags to request a
     IPv4 only or IPv6 only connection (may be useful in mixed environments
     where a hostname resolves in both A and AAAA addresses)
   - if no hostname is specified, dynamically allocate memory for the
     default hostname instead of pointing to a string constant (clients
     assume the memory needs to be free'd if it is not a NULL pointer)

Fri Jan 19 09:27:44 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/powercom.c: fix a typo which produce a segfault on Solaris 10,
   and another typo on a debug message (from Jürgen Lesny)
 
Wed Jan 16 09:14:14 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut.h, mge-hid.c, drivers.list: add more MGE models (Ellipse
   MAX, Galaxy 4000 and Galaxy 5000)

Fri Jan 19 07:37:55 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 * drivers/snmp-upc.[ch], drivers/ietfmib.h, drivers/psmib.h, man/snmp-ups.8:
   - major rework to improve 3-phase support, to make sure that 3-phase
     versions of variables are only issued for 3-phase upses
   - support auto-detection of the mib to use.

Thu Jan 18 21:02:29 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.c:
   - hostname is now optional in upscli_splitname(), defaults to "localhost"