@@ -91,6 +91,11 @@ N: Lars Balker Rasmussen
 E: lbr@mjolner.dk
 D: Solaris and minor patches
 
+N: Carlos Rodrigues
+E: carlos.efr@mail.telepac.pt
+W: http://students.fct.unl.pt/~cer09566/
+D: author of the "megatec" driver
+
 N: David Santinoli
 E: david@santinoli.com
 W: http://www.santinoli.com
