@@ -55,6 +55,10 @@ P: Peter Selinger
 M: selinger@users.sourceforge.net
 S: Maintained: usbhid-ups belkinunv
 
+P: Carlos Rodrigues
+M: carlos.efr@mail.telepac.pt
+S: Maintained: megatec
+
 Packaging
 =========
 
