@@ -362,6 +362,7 @@
 "PowerMan"	"BackPro"	""	"genericups upstype=4"
 
 "PowerTech"	"Comp1000"	"DTR cable power"	"genericups upstype=3"
+"PowerTech"	"SMK-800"	""	"megatec"
 
 "PowerWalker"	"Line-Interactive VI 1000"	""	"megatec"
 "PowerWalker"	"Line-Interactive VI 400/600/800"	""	"megatec"
@@ -436,6 +437,7 @@
 "Tripp-Lite"    "AVR550U"	"USB"   "usbhid-ups"
 
 "Trust"		"UPS 1000 Management PW-4105"	""	"megatec"
+"Trust"		"UPS 1200VA Management PW-4120M"	""	"megatec"
 
 "UNITEK"	"ALPHA 500 IC"		""	"megatec"
 "UNITEK"	"Alpha 1000is"		""	"megatec"
