@@ -7,25 +7,11 @@ megatec driver. For information about the core driver, see
 \fBnutupsdrv\fR(8).
 
 .SH SUPPORTED HARDWARE
-The megatec driver is known to work with the following UPSes:
 
-    Maxxtro UPS 600VA
-    Mustek PowerMust 400VA Plus
-    Mustek PowerMust 600VA Plus
-    Mustek PowerMust 800VA Pro
-    Mustek PowerMust 1000VA Plus
-    Mustek PowerMust 1400VA Plus
-    Mustek PowerMust 2000VA USB
-    OnLite AQUA 50
-    Soyntec Sekury C 500
-    Soyntec Sekury C 800
-    Square One Power QP 1000
-    Tecnoware Easy Power 1200
-    Trust UPS 1000 Management PW-4105
-
-It is also known to work with various models from Blazer, Energy Sistem
-and Fenton Technologies. It may also work with similar models from other
-manufacturers, but they haven't been tested.
+The megatec driver is known to work with various UPSes from Blazer, Energy
+Sistem, Fenton Technologies, Mustek and many others. The NUT compatibility
+table lists all the known supported models. Keep in mind, however, that
+other models not listed there may also be supported but haven't been tested.
 
 On models with both a serial port (RS-232) and an USB port, only
 the serial port is supported.
@@ -55,6 +41,10 @@ Optional.  Delay before the UPS is turned back on (minutes).
 .IP "offdelay=\fIint\fR"
 
 Optional.  Delay before the UPS is turned off (minutes).
+
+.IP "battvolts=\fIfloat\fR:\fIfloat\fR"
+
+Optional.  The battery voltage interval (volts).
 
 .SH UPS COMMANDS
 
@@ -110,16 +100,21 @@ Interval to wait before (re)starting the load (seconds)
 .SH KNOWN PROBLEMS
 
 The battery charge (%) value is only a best-effort calculation and may be
-incorrect, or non-existant, for some UPS models.
+incorrect, or non-existant, for some UPS models. In any case, you can always
+resort to finding the voltages at which the battery becomes fully discharged
+and fully charged, and specify them manually using the "battvolts" option.
+If you do this, please notify the author of this driver.
 
 Some UPS commands aren't supported by all models. In most cases, the driver
 will send a message to the system log when the user tries to execute an
 unsupported command. Unfortunately, some models don't even provide a way for
-the driver to check for this, so the unsupported commands will silently fail.
+the driver to check for this, so the unsupported commands will silently
+fail.
 
 Some models report a bogus value for the beeper status (will always be
-"enabled" or "disabled"). So, the "beeper.toggle" command may appear to have no
-effect in the status reported by the driver when, in fact, it is working fine.
+"enabled" or "disabled"). So, the "beeper.toggle" command may appear to have
+no effect in the status reported by the driver when, in fact, it is working
+fine.
 
 The temperature value is also known to be bogus in some models.
 
