@@ -1,3 +1,10 @@
+Sun Jan 21 19:25:10 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+ - megatec: added a new parameter to override the battery empty and battery
+   full voltages, used in the charge calculations
+ - data/driver.list: a couple new models supported by megatec
+ - docs/FAQ: removed fentonups reference
+ - added myself to the AUTHORS and MAINTAINERS files
+
 Sun Jan 21 10:42:29 UTC 2007 / 
 
  - clients/upslog.c, clients/upsimage.c, clients/upsc.c, clients/upsrw.c,
